--- a/Padre-Plugin-Perl6/Changes
+++ b/Padre-Plugin-Perl6/Changes
@@ -1,7 +1,7 @@
 Changes
 
 0.026 2009.1.???????????????????????
-    - Depends on Syntax::Highlight::Perl6 0.035 which has the latest STD.pm
+    - Depends on Syntax::Highlight::Perl6 0.036
     - Updated to S29-function.pod pugs r25021
     - Works with Padre 0.26
 
