--- a/Padre-Plugin-Encode/Changes
+++ b/Padre-Plugin-Encode/Changes
@@ -1,5 +1,8 @@
 Revision history for Padre-Plugin-Encode
 
+x.y.z
+	Removed release-time tests that ran at install-time (ADAMK)
+
 0.1.3   Thu Jan  8 03:27:54 KST 2009
         Support for Padre 0.24
         Add "Encoding document to System Default"
