--- a/Padre-Plugin-AcmePlayCode/Changes
+++ b/Padre-Plugin-AcmePlayCode/Changes
@@ -1,5 +1,8 @@
 Revision history for Padre-Plugin-AcmePlayCode
 
+0.07    2009.1.23
+        for Padre 0.26
+
 0.06    2009.1.5
         for Padre 0.23
 
