--- a/Padre-Plugin-HTMLExport/Changes
+++ b/Padre-Plugin-HTMLExport/Changes
@@ -1,5 +1,8 @@
 Revision history for Padre-Plugin-HTMLExport
 
+0.04    2009.2.1
+        for Padre 0.26
+
 0.03    2009.1.5
         for Padre 0.23
 
