--- a/Changes
+++ b/Changes
@@ -52,6 +52,7 @@ v0.25 2009.01.09
     Automatic indentation style detection now the default (SMUELLER)
     User interface now "locked" by default (SMUELLER)
     Updated Italian translation (SBLANDIN)
+    Addition of contextual (un-) commenting (CLAUDIO)
 
 v0.24 2009.01.06
 
