--- a/Padre-Plugin-Perl6/Changes
+++ b/Padre-Plugin-Perl6/Changes
@@ -1,7 +1,7 @@
 Changes
 
-0.026 2009.1.COMMING_SOON
-    - Depends on Syntax::Highlight::Perl6 0.039
+0.026 2009.2.04
+    - Takes advantage of STD.pm performance improvements by using Syntax::Highlight::Perl6 0.040
     - Updated to S29-function.pod pugs r25021
     - Works with Padre 0.26
 
