--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Changes for Perl Application Development and Refactoring Environment
 
+v0.27
+
+    Statusbar show status kept accross startup (#200) (JQUELIN)
+
 v0.26 2009.02.01
 
     On X11 based platforms, selecting text using the mouse and pasting it
