--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Changes for Perl Application Development and Refactoring Environment
 
 v0.27
 
+    Fix the Windows menu to be able to jump to files (SZABGAB)
     Statusbar show status kept accross startup (#200) (JQUELIN)
 
 v0.26 2009.02.01
