--- a/Padre/Changes
+++ b/Padre/Changes
@@ -2,6 +2,7 @@ Changes for Perl Application Development and Refactoring Environment
 
 v0.27 2009.02.10
 
+    Copyright changed to "The Padre development team as listed in Padre.pm." (SZABGAB)
     Some fixes in the search menu.
     Improve file type (Perl 5 / Perl 6 ) recognition. (SZABGAB)
     Fix the Windows menu to be able to jump to files. (SZABGAB)
