--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Changes for Perl Application Development and Refactoring Environment
 
     Allow the shortening of the the file list in the Window menu. (SZABGAB)
+    Fix Ctrl-TAB and Ctrl-Shift-TAB. (SZABGAB)
 
 v0.27 2009.02.10
 
