--- a/Padre-Plugin-SVK/Changes
+++ b/Padre-Plugin-SVK/Changes
@@ -1,5 +1,8 @@
 Revision history for Padre-Plugin-SVK
 
+0.03
+        Add Diff and commit per project.
+
 0.02    2009.03.05
         Add Padre and SVK as dependency
         Add status of this directory and this project.
