--- a/Padre/Changes
+++ b/Padre/Changes
@@ -21,7 +21,7 @@ v0.27 2009.02.10
     Some fixes in the search menu.
     Improve file type (Perl 5 / Perl 6 ) recognition. (SZABGAB)
     Fix the Windows menu to be able to jump to files. (SZABGAB)
-    Statusbar show status kept accross startup (#200). (JQUELIN)
+    Statusbar visibility kept accross startup (#200). (JQUELIN)
 
 v0.26 2009.02.01
 
