--- a/Padre/Changes
+++ b/Padre/Changes
@@ -7,6 +7,7 @@ v0.29 2009.03.13
     Eliminate a test failure on non-English locale. (SZABGAB)
     Internal cleanups & documentation for configuration subsystem (JQUELIN)
     Require Test::Most for the testing and bail_on compilation errors. (SZABGAB)
+    Eliminated a huge memory leak by not updating the plugin menu on every keystroke. (SZABGAB)
 
 v0.28 2009.03.04
 
