--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Changes for Perl Application Development and Refactoring Environment
 
+    Storing cursor position in file (#206) (JQUELIN)
+
 v0.29 2009.03.13
 
     Initial support for directory browser based on the Outline code (SZABGAB)
