--- a/Changes
+++ b/Changes
@@ -4,6 +4,8 @@ Changes for Perl Application Development and Refactoring Environment
     Reload file keeps cursor position (#220) (JQUELIN)
     Preferences windows title should match its menu invocation (#270) (JQUELIN)
     Fix error if passed a non-existent filename on command-line (#155) (JQUELIN)
+    New task_warn/task_print methods in background tasks to easily
+        print to the output pane (SMUELLER)
 
 v0.29 2009.03.13
 
